src/objects/Site_Survey__c.object
<CustomObject>
    <description>Used to capture site surveys conducted for the site.</description>
    <fields>
        <fullName>Access_Technology__c</fullName>
        <label>Access Technology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fibre</fullName>
                    <default>true</default>
                    <label>Fibre</label>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
                <value>
                    <fullName>Coax</fullName>
                </value>
                <value>
                    <fullName>FTTP</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Site Surveys</relationshipLabel>
        <relationshipName>Site_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Budget_Estimate__c</fullName>
        <label>Budget/Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Comp__c</fullName>
        <label>Earliest Comp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_CablingCapex__c</fullName>
        <label>Cabling Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_CablingOpex__c</fullName>
        <label>Cabling Opex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_CivilsCapex__c</fullName>
        <label>Civils Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_CivilsOpex__c</fullName>
        <label>Civils Opex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_InternalCablingCapex__c</fullName>
        <label>Internal Cabling Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_InternalCablingOpex__c</fullName>
        <label>Internal Cabling Opex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <formula>Address__r.cscrm__Address_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Consulting_ID__c</fullName>
        <label>UM Consulting-ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_GNV__c</fullName>
        <label>UM GNV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Erforderlich</fullName>
                </value>
                <value>
                    <fullName>Nicht erforderlich</fullName>
                </value>
                <value>
                    <fullName>Wird nachgereicht</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wish_Date__c</fullName>
        <label>Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cabling_cable_m__c</fullName>
        <label>Cable (m) :</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cabling_details__c</fullName>
        <label>Details :</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cabling_duration_days__c</fullName>
        <label>Duration (days) :</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cabling_notice_days__c</fullName>
        <label>Notice (days) :</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cabling_type__c</fullName>
        <label>Type :</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>civils_details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>civils_duct_m__c</fullName>
        <label>Duct (m) :</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>civils_duration_days__c</fullName>
        <label>Duration (days) :</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>civils_hand_hole__c</fullName>
        <label>Hand-holes (qty)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>civils_man_holes__c</fullName>
        <label>Man holes (qty)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>civils_notice_days__c</fullName>
        <label>Notice (days) :</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>civils_type__c</fullName>
        <label>Type :</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>internal_cable_m__c</fullName>
        <label>Cable (m) :</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>internal_details__c</fullName>
        <label>Details :</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>internal_duration__c</fullName>
        <label>Duration (days) :</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>internal_notice_days__c</fullName>
        <label>Notice (days) :</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>internal_type__c</fullName>
        <label>Type :</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_details__c</fullName>
        <label>Details :</label>
        <type>TextArea</type>
    </fields>
    <label>Site Survey</label>
    <nameField>
        <label>Site Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>